Name:           lambdachair
Version:        0.0.1
build-type:     Simple
License:        MIT
License-File:   LICENSE
Author:         Deian Stefan
Maintainer:     Deian Stefan <deian at cs dot stanford dot edu>
Synopsis:       Conference review system
Category:       Web
Cabal-Version:  >= 1.8

Description:
  Implementation of LambdaChair conference review system

Source-repository head
  Type:     git
  Location: git://github.com/deian/lambdachair.git


Executable lambdachair
  Main-is: Main.hs
  ghc-options: -package ghc -Wall -fno-warn-orphans -fno-warn-unused-do-bind
  Build-Depends:
    base < 6
   ,hails >= 0.11.1.3
   ,lio >= 0.11
   ,wai >= 2.1 && < 3.0
   ,warp
   ,text
   ,bytestring
   ,wai-app-static
   ,wai-extra
   ,blaze-html
   ,http-types
